--- a/style.css
+++ b/style.css
@@ -112,6 +112,14 @@ nav a:hover {
 	padding: 0 20px 20px 0;
 }
 
+#red {
+	color: red;
+}
+
+#green {
+	color: green;
+}
+
 /* Footer */
 footer {
 	background-color: black;
